SERVER-26102 set shardVersion to IGNORED for system.indexes, but only if a shardVersion was sent in the command